# frappe

./: .clang-tidy  CMakeLists.txt  README.md  framework.json
cmake/: frappe-config.cmake.in
examples/: CMakeLists.txt  basic.cpp  comprehensive_example.cpp  entry_pipeline_example.cpp  glob_example.cpp  pipeline_example.cpp  regex_example.cpp  rpp_example.cpp
include/frappe/: aggregators.hpp  async.hpp  attributes.hpp  disk.hpp  entry.hpp  entry_adapters.hpp  error.hpp  exports.hpp  file_lock.hpp  filesystem.hpp  filters.hpp  find.hpp  format_utils.hpp  formatters.hpp  frappe.hpp  glob.hpp  mmap.hpp  path.hpp  permissions.hpp  projections.hpp  regex.hpp  sorters.hpp  status.hpp  transforms.hpp  traversal.hpp  version.hpp  watcher.hpp
include/rpp/: aggregate.hpp  aggregate_ext.hpp  combine.hpp  comparator.hpp  concepts.hpp  distinct.hpp  extras.hpp  filter.hpp  filters_ext.hpp  join.hpp  pipeable.hpp  rpp.hpp  select.hpp  set_ops.hpp  sort.hpp  transform.hpp  window.hpp
src/: attributes.cpp  disk.cpp  entry.cpp  error.cpp  file_lock.cpp  file_lock_impl.hpp  filesystem.cpp  find.cpp  glob.cpp  mmap.cpp  path.cpp  permissions.cpp  regex.cpp  status.cpp  traversal.cpp  version.cpp  watcher.cpp  watcher_impl.hpp
src/platform/linux/: attributes_impl.cpp  disk_impl.cpp  file_lock_impl.cpp  filesystem_impl.cpp  path_impl.cpp  permissions_impl.cpp  status_impl.cpp  watcher_impl.cpp
src/platform/macos/: attributes_impl.cpp  disk_impl.cpp  file_lock_impl.cpp  filesystem_impl.cpp  path_impl.cpp  permissions_impl.cpp  status_impl.cpp  watcher_impl.cpp
src/platform/windows/: attributes_impl.cpp  disk_impl.cpp  file_lock_impl.cpp  filesystem_impl.cpp  path_impl.cpp  permissions_impl.cpp  status_impl.cpp  watcher_impl.cpp
tests/: CMakeLists.txt  test_aggregators.cpp  test_async.cpp  test_attributes.cpp  test_disk.cpp  test_entry.cpp  test_file_lock.cpp  test_filesystem.cpp  test_filters.cpp  test_find.cpp  test_formatters.cpp  test_glob.cpp  test_mmap.cpp  test_path.cpp  test_permissions.cpp  test_projections.cpp  test_regex.cpp  test_rpp.cpp  test_sorters.cpp  test_status.cpp  test_transforms.cpp  test_traversal.cpp  test_version.cpp  test_watcher.cpp
